# Amor-Agent

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
amor/: __init__.py  config.py  exceptions.py  logging.py
amor/events/: __init__.py  bus.py  types.py
amor/protocols/: __init__.py  llm.py  memory.py  planner.py  tool.py
context/: assembler.py  memory_store.py  rag.py  reader.py  web_search.py  window.py
db/: base.py  engine.py
db/models/: __init__.py  agent.py  checkpoint.py  conversation.py  memory.py  message.py  task.py
docs/: architecture-diagram.md  architecture_flowchart.md
docs/superpowers/plans/: 2026-06-28-four-layer-agent-plan.md
docs/superpowers/specs/: 2026-06-28-four-layer-agent-design.md
harness/: orchestrator.py  planner.py  runner.py  tool_registry.py
harness/mcp/: client.py
harness/skills/: base.py  loader.py
harness/skills/builtin/: file_ops.py  image_gen.py  safe_shell.md  search.py  shell.py  step_by_step.md  utils.py
harness/skills/user/: example.md
llm/: client.py
loop/: controller.py  state.py
prompt/: roles.py  system.py  templates.py
tests/: test_config.py  test_events.py  test_exceptions.py  test_llm_client.py  test_protocols.py  test_tool_registry.py
web/: app.py  deps.py  index.html  package-lock.json  package.json  vite.config.js  ws.py
web/routes/: __init__.py  agent.py  chat.py  knowledge.py  model.py  skill.py
web/src/: App.vue  main.js
web/src/components/: AgentPanel.vue  ChatView.vue  ConversationList.vue  Sidebar.vue
web/src/styles/: global.css
web/static/: index.html
